fix(Table2): improve table layout and styling for better readability and responsiveness

--- a/Project4/milestone1/src/index.scss
+++ b/Project4/milestone1/src/index.scss
@@ -83,7 +83,8 @@ table {
     }
 
     th {
-        min-width: 160px;
+        width: 100%;
+        min-width: 140px;
     }
 
     .headerHighlight {
@@ -113,6 +114,13 @@ table {
 .container {
     width: 100%;
     overflow: auto;
+    display: flex;
+    flex-direction: column;
+
+    .table {
+        width: 100%;
+        overflow: auto;
+    }
 }
 
 button {
@@ -126,4 +134,6 @@ button {
 .filter-header {
     display: flex;
     align-items: center;
+
+   
 }
